--- a/keypoint-detection/index.html
+++ b/keypoint-detection/index.html
@@ -108,7 +108,7 @@
                 <h3 class="u-text u-text-default u-text-2">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-1" href="Filters-and-Frequencies.html#sec-fc50" data-page-id="1890410318">Single Point Detection</a>
                 </h3>
-                <p class="u-text u-text-3">1. Dataset<br>2. Model and Training<br>3. Results<br>
+                <p class="u-text u-text-3">1. Dataset<br>2. Model and Training<br>3. Results<br>4. Varying Hyper Parameters<br>
                   <br>
                 </p>
               </div>
@@ -130,7 +130,7 @@
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-3" href="Filters-and-Frequencies.html#sec-e59b" data-page-id="1890410318">Training on Large Dataset<br>
                   </a>
                 </h3>
-                <p class="u-text u-text-7">1. Dataset and Preprocessing<br>2. Model and Training<br>3. Results
+                <p class="u-text u-text-7">1. Dataset and Preprocessing<br>2. Model and Training<br>3. Results<br>4. Fun Experiments
                 </p>
               </div>
             </div>
