updated kaggle blurb

--- a/keypoint-detection/index.html
+++ b/keypoint-detection/index.html
@@ -598,7 +598,7 @@
         <br>
       </h1>
       <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Kaggle Contest</p>
-      <p class="u-align-center u-text u-text-3">Our class held a kaggle contest on the test set data. As of Monday November 15, I currently hold the 2nd best model out of 97 models with a mean absolute error of 5.83 pixels.<br>Link to Kaggle:&nbsp;https://www.kaggle.com/c/cs194-26-fall-2021-project-5/leaderboard
+      <p class="u-align-center u-text u-text-3">Our class held a kaggle contest on the test set data where the metric was mean-absolute-error of predicted key points. I ranked 3 out of 153 with my model recieving a mean-absolute-error of 5.83 pixels.<br>Link to Kaggle:&nbsp;https://www.kaggle.com/c/cs194-26-fall-2021-project-5/leaderboard
       </p>
       <p class="u-large-text u-text u-text-default u-text-variant u-text-4">Face Morphing (Revisited)</p>
       <p class="u-text u-text-5">With an automatic facial keypoint detector, we now have a method to automate face morphing entirely. It is a faily simple process as well: use the neural network model to detect the keypoints and then pass these points into our face morphing algorithm. Pictured below is a face morph done between my housemates and our significant others produced without manually selecting any keypoints.</p>
